# utabako

./: .gitmodules  eslint.config.js  nuxt.config.ts  package.json  pnpm-lock.yaml
app/: app.vue
app/assets/css/: tailwind.css
app/components/: ServerCreator.vue  ServerRadioGroup.vue  ServerSelector.vue  ServerStatus.vue  ServiceStatus.vue  Spin.vue  TitleBar.vue
app/components/ui/drawer/: DrawerOverlay.vue
app/composables/: useOutbound.ts  useServer.ts  useService.ts  useSingBox.ts  useSubscription.ts  useTauri.ts
app/pages/: index.vue
app/pages/servers/: index.vue
app/pages/services/: index.vue
app/pages/settings/: index.vue
app/stores/: config.ts  global.ts
app/utils/: constants.ts  error.ts  singBox.ts  tauri.ts  types.ts
scripts/: build.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/tauri-plugin-health-check/: Cargo.toml
src-tauri/crates/tauri-plugin-health-check/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-health-check/src/: commands.rs  lib.rs
src-tauri/crates/tauri-plugin-port-plz/: Cargo.toml  build.rs
src-tauri/crates/tauri-plugin-port-plz/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-port-plz/permissions/schemas/: schema.json
src-tauri/crates/tauri-plugin-port-plz/src/: commands.rs  lib.rs
src-tauri/crates/tauri-plugin-sing-box/: Cargo.toml  build.rs
src-tauri/crates/tauri-plugin-sing-box/permissions/: default.toml
src-tauri/crates/tauri-plugin-sing-box/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-sing-box/permissions/autogenerated/commands/: elevate_privileges.toml
src-tauri/crates/tauri-plugin-sing-box/permissions/schemas/: schema.json
src-tauri/crates/tauri-plugin-sing-box/src/: commands.rs  lib.rs
src-tauri/crates/tauri-plugin-system-proxy/: Cargo.toml  build.rs
src-tauri/crates/tauri-plugin-system-proxy/permissions/: default.toml
src-tauri/crates/tauri-plugin-system-proxy/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-system-proxy/permissions/autogenerated/commands/: unset.toml
src-tauri/crates/tauri-plugin-system-proxy/permissions/schemas/: schema.json
src-tauri/crates/tauri-plugin-system-proxy/src/: commands.rs  lib.rs
src-tauri/crates/tauri-plugin-system-tray/: Cargo.toml
src-tauri/crates/tauri-plugin-system-tray/src/: lib.rs
src-tauri/crates/tauri-plugin-tray/: Cargo.toml
src-tauri/crates/tauri-plugin-tray/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-tray/src/: lib.rs
src-tauri/crates/tauri-plugin-utray/: Cargo.toml  build.rs
src-tauri/crates/tauri-plugin-utray/permissions/: default.toml
src-tauri/crates/tauri-plugin-utray/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-utray/permissions/schemas/: schema.json
src-tauri/crates/tauri-plugin-utray/src/: commands.rs  error.rs  lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
