[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members  = ["crates/*"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-sing-box = { version = "0.1.0", path = "./crates/tauri-plugin-sing-box" }
tauri-plugin-system-proxy = { version = "0.1.0", path = "./crates/tauri-plugin-system-proxy" }
tauri-plugin-health-check = { version = "0.1.0", path = "./crates/tauri-plugin-health-check" }
tauri-plugin-system-tray = { version = "0.1.0", path = "./crates/tauri-plugin-system-tray" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
