[package]
name = "tauri-plugin-sing-box"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-sing-box"

[dependencies]
tauri = { version = "2.2.5" }
serde = "1.0"
thiserror = "2"
tauri-plugin-shell = "2.2.0"
tokio = { version = "1.43.0", features = ["process", "sync"] }
nix = { version = "0.29.0", features = ["signal"] }
rustem_proxy = "0.1.5"
dunce = "1.0.5"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
