[package]
name = "tauri-plugin-system-tray"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-system-tray"

[dependencies]
tauri = { version = "2.2.4", features = ["image-png"] }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
