[package]
name = "tauri-plugin-utray"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-utray"

[dependencies]
tauri = { version = "2.2.5", features = ["tray-icon", "image-png"] }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
